Replaced LinkedList by ArrayList. 860 times speedup.